# async-trait-static

./: Cargo.toml  README.md
examples/: any-self-value.rs  any_type_self.rs  arguments-value.rs  ass_type.rs  associated-type.rs  async-self.rs  async-test-expand.rs  async-test.rs  call-self-in-impl-expand.rs  call-self-in-impl.rs  expand.rs  generic_arguments.rs  generic_return.rs  impl_arguments.rs  no-self-and-value.rs  no_self.rs  reference_arguments.rs  self-ref-expand.rs  self_by_mut_ref.rs  self_by_mut_value.rs  self_by_ref.rs  self_by_value.rs  template-arg.rs  template-expand.rs  test.rs  test_mixed_ritit.rs  test_ritit.rs  trait-with-default-expand.rs  trait-with-default.rs
src/: async_trait.rs  expand.rs  lib.rs  parse.rs  ritit.rs  selector.rs
