[package]
name = "async-trait-static"
version = "0.1.1"
authors = ["tiannian <dtiannian@aliyun.com>"]
edition = "2018"
description = "async fn in trait for no_std"
license = "MIT"
readme = "README.md"
repository = "https://github.com/tiannian/async-trait-static"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0", features = ["full", "visit-mut", "extra-traits", "parsing"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies.async-std]
version = "1.0.0"
features = ["attributes"]

[lib]
proc-macro = true

